# ghost

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Plan.md  ui.toml
assets/: chart.md  rin_talk.webm  xiaoMei_talk.webm
assets/persona/sasha/: config.toml
assets/raw/minAh/: config.toml
assets/raw/rin/: config.toml
assets/raw/xiaoMei/: config.toml
gassetsmaker/: Cargo.toml  readme.md
gassetsmaker/scripts/: mp4_fs.sh
gassetsmaker/src/: main.rs
gframekill/: Cargo.toml  readme.md
gframekill/scripts/: convert_webm.sh
ghost-callout/: Cargo.toml
ghost-callout/src/: callout.rs  lib.rs  shape.rs  text.rs
ghost-ui/: Cargo.toml
ghost-ui/src/: animated_skin.rs  icon.rs  layer.rs  lib.rs  platform.rs  skin.rs  window.rs
ghost-ui/src/elements/: button.rs  button_image.rs  label.rs  marquee_label.rs  mod.rs
ghost-ui/src/elements/callout/: mod.rs  shape.rs  text.rs  types.rs
ghost-ui/src/renderer/: button.rs  mod.rs  sprite.rs  sprite.wgsl  widget.rs  widget.wgsl  widget_image.wgsl
ghost-ui/src/widget/: mod.rs
ghost-ui/src/window/: config.rs  mod.rs
scripts/: convert_webm.sh
src/: actions.rs  app.rs  callout_app.rs  config.rs  main.rs  tray.rs  ui.rs  vars.rs
src/windows/: callout_window.rs  chat_window.rs  main_window.rs  mod.rs
