[package]
name = "ghost"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["ghost-ui", "ghost-callout","gframekill"]

[dependencies]
ghost-ui = { path = "./ghost-ui" }
ghost-callout = { path = "./ghost-callout" }
wgpu = "0.19"
image = "0.24"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
tray-icon = "0.14"
tao = "0.25"
egui = "0.27"
egui-wgpu = "0.27"
pollster = "0.3"
glob = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[[bin]]
name = "ghost"
path = "src/main.rs"

[package.metadata.bundle.macos]
LSUIElement = "1"
