[package]
name = "ghost-callout"
version = "0.1.0"
edition = "2021"
description = "Callout bubbles and text animation for ghost-ui"
license = "MIT"

[dependencies]
ghost-ui = { path = "../ghost-ui" }
glyphon = "0.5"
cosmic-text = "0.11"
wgpu = "0.19"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
