[package]
name = "ghost-ui"
version = "0.1.0"
edition = "2021"
description = "Reusable crate for shaped transparent windows with wgpu"
license = "MIT"

[dependencies]
tao = { version = "0.25", features = ["rwh_05"] }
wgpu = "0.19"
image = "0.24"
raw-window-handle = "0.5"
bytemuck = { version = "1.14", features = ["derive"] }
log = "0.4"
thiserror = "1.0"
zip = "2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
pollster = "0.3"
tray-icon = "0.14"
glyphon = "0.5"
cosmic-text = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[dev-dependencies]
env_logger = "0.11"
